<resources>
    <string name="app_name" translatable="false">Root Checker Lite</string>
    <string name="busybox_version_info">Busybox version number</string>
    <string name="confirm_root">Confirm Root</string>
    <string name="root_and_busybox_check">root and busybox check</string>
    <string name="rate_us">Rate us</string>
    <string name="intro">Welcome to worlds most lightest root checker app. This root checker app has no ads and is completely free.To use this app, first press ROOT AND BUSYBOX CHECK VERSION.This button checks if root and busybox are installed.To confirm root access, press CONFIRM ROOT button below.It asks for root access and checks if root is properly installed and verifies that root is not broken.To know your busybox version number, press the BUSYBOX VERSION NUMBER button and you are done.If this application helps you , plz rate it in the play store.</string>
    <string name="about" translatable="false">About</string>
    <string name="back">Back</string>
    <string name="about1" translatable="false">Root Checker Lite v1.1</string>
    <string name="about2" translatable="false"> © 2018  Revanth Reddy.N</string>
    <string name="about3"> Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at</string>
    <string name="about4" translatable="false"> http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about5">   Unless required by applicable law or agreed to in writing,software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License.</string>
</resources>
